# Flop

./: Cargo.toml  README.md  README.org
.github/workflows/: test.yml
flop/: Cargo.toml
flop-compiler/: Cargo.toml
flop-frontend/: Cargo.toml
flop-frontend/src/: ast.rs  error.rs  lexer.rs  lib.rs  macros.rs  parser.rs  stack.rs  token.rs
flop-interpretor/: Cargo.toml
flop-interpretor/src/: ast.rs  env.rs  error.rs  eval.rs  evaluation.rs  file.rs  helpers.rs  lib.rs  operation.rs  parser.rs  repl.rs
flop/src/: main.rs
lisp-rs-cli/: Cargo.toml
lisp-rs-cli/src/: main.rs
lisp-rs-interpretor/: Cargo.toml
lisp-rs-interpretor/src/: ast.rs  env.rs  error.rs  eval.rs  helpers.rs  lexer.rs  lib.rs  repl.rs
src/: error.rs  eval.rs  file.rs  helpers.rs  lexer.rs  main.rs  parser.rs  repl.rs
tests/: example.ls  functions.ls  variable.ls
