[workspace]
members = [
    "flop",
    "flop-interpretor",
    "flop-frontend",
    "flop-compiler",
]

resolver = "2"

[workspace.package]
name = "flop"
version = "0.1.0"
edition = "2021"
authors = ["Hamza Hamud <self@hamzahamud.com>"]
license = "AGPL"
repository = "https://github.com/flop/flop"
readme = "README.md"
