[package]
name = "flop-interpretor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
flop-frontend = { path = "../flop-frontend" }
ariadne = { version = "0.3.0", features = ["auto-color"] }
